--- a/html/index-2.html
+++ b/html/index-2.html
@@ -40,7 +40,7 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="index.html">Homepage 1</a>
+            <a class="dropdown-item" href="../index.html">Homepage 1</a>
             <a class="dropdown-item active" href="index-2.html">Homepage 2</a>
           </div>
         </li>
@@ -525,7 +525,7 @@
         <p class="caption">Lorem ipsum dolor sit amet consectetur adipisicing elit. <br> Expedita voluptates earum minima reiciendis consectetur veniam aut dignissimos</p>
 
         <ul class="nav justify-content-center py-3">
-          <li class="nav-item"><a href="index.html" class="nav-link fg-white px-4">Home</a></li>
+          <li class="nav-item"><a href="../index.html" class="nav-link fg-white px-4">Home</a></li>
           <li class="nav-item"><a href="" class="nav-link fg-white px-4">Key Features</a></li>
           <li class="nav-item"><a href="" class="nav-link fg-white px-4">Pricing</a></li>
           <li class="nav-item"><a href="" class="nav-link fg-white px-4">Testimonials</a></li>
