--- a/html/about.html
+++ b/html/about.html
@@ -3,25 +3,15 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
-
   <meta name="description" content="Mobile Application HTML5 Template">
-
   <meta name="copyright" content="MACode ID, https://www.macodeid.com/">
-
-  <title>Mobster - One page app template</title>
-
+  <title>Clase invertida</title>
   <link rel="shortcut icon" href="../assets/favicon.png" type="image/x-icon">
-
   <link rel="stylesheet" href="../assets/css/maicons.css">
-
   <link rel="stylesheet" href="../assets/vendor/animate/animate.css">
-
   <link rel="stylesheet" href="../assets/vendor/owl-carousel/css/owl.carousel.min.css">
-
   <link rel="stylesheet" href="../assets/css/bootstrap.css">
-
   <link rel="stylesheet" href="../assets/css/mobster.css">
 </head>
 <body>
@@ -34,31 +24,33 @@
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarToggler" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-  
+
     <div class="collapse navbar-collapse" id="navbarToggler">
-      <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
-        <li class="nav-item dropdown">
-          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Home</a>
+      <ul class="navbar-nav ml-auto mt-3 mt-lg-0">
+        <li class="nav-item ">
+          <a class="nav-link" href="../index.html">Presentación</a>
+        </li>
+        <li class="nav-item dropdown active">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" data-toggle="dropdown"
+             aria-haspopup="true" aria-expanded="false">Actividades para la casa</a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-            <a class="dropdown-item" href="../index.html">Homepage 1</a>
-            <a class="dropdown-item" href="index-2.html">Homepage 2</a>
+            <a class="dropdown-item" href="./house.html">Para la casa</a>
+            <a class="dropdown-item" href="./reflection.html">Para la reflexion</a>
+            <a class="dropdown-item" href="./verification.html">Comprobación de la actividad</a>
           </div>
         </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="about.html">About</a>
+        <li class="nav-item">
+          <a class="nav-link" href="./class.html">Para la Clase</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="blog.html">Blog</a>
+          <a class="nav-link" href="./evaluation.html">Evaluación</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" href="updates.html">What's New</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact</a>
+          <a class="nav-link" href="./contact.html">Contacto</a>
         </li>
       </ul>
       <div class="ml-auto my-2 my-lg-0">
-        <button class="btn btn-primary rounded-pill">Download Now</button>
+        <a href="https://servicioapirest.weebly.com/" target="_blank"><button class="btn btn-primary rounded-pill">Portafólio</button></a>
       </div>
     </div>
   </div>
