--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                     <div class="badge badge-soft mb-2">Clase invertida</div>
                     <h1 class="mb-4 fw-normal">Servicios API REST</h1>
                     <p class="mb-4">Promover el trabajo colaborativo, optimizar el tiempo de clase, el uso de las tecnologías en la clase de programación y hacer énfasis en el aprendizaje autónomo</p>
-                    <a href="#" class="btn btn-dark">Get Started</a>
+                    <h4><strong>Docente: </strong>Javier Elvis Canqui Llusco</h4>
                 </div>
                 <div class="col-lg-6 d-none d-lg-block wow zoomIn">
                     <div class="img-place mobile-preview shadow floating-animate">
